# retrofront

./: .gitignore  .gitmodules  Cargo.toml  Package.swift  README.md  TODO.md  learnings.md  project.yml  write_lib_rs.py
.github/workflows/: ios-device.yml  retrofront.yml
Retrofront/: .gitignore  Cargo.toml  Makefile  Package.resolved  Package.swift  README.md  project.yml
Retrofront/apps/frontend/CRetrofrontCore/: retrofront_core.h
Retrofront/apps/iOS/Native/: RetrofrontDocumentPicker.m
Retrofront/apps/iOS/Resources/: Info.plist
Retrofront/apps/iOS/Resources/info/: bsnes-jg.info  bsnes.info  mgba.info
Retrofront/apps/iOS/Sources/: DashboardView.swift  EmulatorRuntimeModel.swift  PlayView.swift  RetrofrontApp.swift  SettingsView.swift  main.swift
Retrofront/apps/iOS/Sources/Play/: PlayerControls.swift  PlayerUtilityBar.swift  RetroArchOverlayView.swift  RuntimeMenuScreen.swift
Retrofront/apps/iOS/Sources/Runtime/: CoreChoiceSheet.swift  RuntimeBootstrap.swift  RuntimeLibrary.swift  RuntimeOverlay.swift  RuntimePlayback.swift  RuntimeSettings.swift
Retrofront/apps/iOS/Sources/Settings/: SettingRows.swift
Retrofront/apps/iOS/Sources/UI/: OneUI.swift  RetroArchMenuChrome.swift  RetroArchMenuSkin.swift  ReusableViews.swift
Retrofront/apps/linux/CGtk/: gtk_shim.h  module.modulemap
Retrofront/apps/linux/Sources/: main.swift
Retrofront/archifacts/ios/: mednafen_gba_libretro_ios.dylib
Retrofront/core/: Cargo.toml  build.rs
Retrofront/core/src/: assets.rs  core_info.rs  dylib.rs  gfx.rs  launch.rs  lib.rs  libretro.rs  overlay.rs  playlist.rs  scanner.rs  settings.rs
Retrofront/core/src/gfx/: config.rs  context.rs  frame.rs  hardware.rs  mod.rs  shader.rs
Retrofront/core/src/gfx/drivers/: bgfx.rs  mod.rs  opengl.rs  software.rs  vulkan.rs  wgpu.rs
Retrofront/core/src/menu/: mod.rs
Retrofront/core/src/options/: mod.rs
Retrofront/cores/Citra.framework/: Citra  Info.plist
Retrofront/cores/Citra.framework/Headers/: CheatsManager.h  Citra.h  CitraCore.h
Retrofront/cores/Citra.framework/Modules/: module.modulemap
Retrofront/cores/azahar.libretro.framework/: Info.plist  azahar.libretro
Retrofront/cores/azahar.libretro.framework/_CodeSignature/: CodeResources
Retrofront/docs/: ARCHITECTURE.md
Retrofront/dylibs/: bsnes-jg_libretro_ios.dylib  mgba_libretro_ios.dylib  snes9x_libretro_ios.dylib
Retrofront/flutter/: README.md  pubspec.yaml
Retrofront/flutter/lib/: main.dart
Retrofront/flutter/lib/src/native/: retrofront_native.dart
Retrofront/flutter/lib/src/ui/: retrofront_app.dart
Retrofront/flutter/test/: retrofront_app_test.dart
Retrofront/frontend/CRetrofrontCore/: module.modulemap  retrofront_core.h
Retrofront/frontend/Sources/RetrofrontSwift/: RetroArchLinuxLayout.swift  RetroArchStorageLayout.swift  Retrofront.swift
Retrofront/frontend/Sources/retrofront-cli/: main.swift
Retrofront/frontend/Sources/retrofront-linux-ui/: main.swift
Retrofront/frontend/Tests/RetrofrontSwiftTests/: RetrofrontTests.swift
Retrofront/frontend/menu/: retrofront_menu_bridge.c  retrofront_menu_bridge.h
Retrofront/frontend/rust/: Cargo.toml  README.md
Retrofront/frontend/rust/retrofront-core/: Cargo.toml  build.rs
Retrofront/frontend/rust/retrofront-core/cinclude/: retrofront_rust.h
Retrofront/frontend/rust/retrofront-core/src/: c_api.rs  core.rs  fs.rs  input.rs  lib.rs  libretro.rs  main.rs  menu.rs  playlist.rs  renderer.rs  settings.rs  shader.rs  task.rs
Retrofront/frontend/rust/retrofront-core/src/assets/: mod.rs
Retrofront/frontend/rust/retrofront-core/src/input/: mod.rs
Retrofront/frontend/rust/retrofront-core/src/platform/: mod.rs
Retrofront/frontend/rust/retrofront-core/src/renderer/: mod.rs
Retrofront/frontend/rust/retrofront-core/src/shader/: mod.rs
Retrofront/frontend/rust/retrofront-core/src/ui_runtime/: mod.rs
Retrofront/frontend/rust/retrofront-core/tests/: ui_runtime.rs
Retrofront/menu/: menu_contentless_cores.c  menu_displaylist.c  menu_driver.c  menu_explore.c  menu_screensaver.c  menu_setting.c  retrofront_menu.c  retrofront_menu.h  retrofront_menu_shim.h
Retrofront/menu/cbs/: menu_cbs_cancel.c  menu_cbs_deferred_push.c  menu_cbs_get_value.c  menu_cbs_info.c  menu_cbs_label.c  menu_cbs_left.c  menu_cbs_ok.c  menu_cbs_right.c  menu_cbs_scan.c  menu_cbs_select.c  menu_cbs_start.c  menu_cbs_sublabel.c  menu_cbs_title.c
Retrofront/menu/drivers/: materialui.c  ozone.c  rgui.c  xmb.c
Retrofront/scripts/: build-linux-appimage.sh  build-rust-ios.sh  fetch-frontend-assets.sh  generate-xcodeproj.sh
Retrofront/ui/: Cargo.toml  build.rs
Retrofront/ui/src/: lib.rs  main.rs
Retrofront/ui/ui/: retrofront.slint
Sources/CLibretroHost/: RetroFrontLibretroHost.c
Sources/CLibretroHost/include/: RetroFrontLibretroHost.h  module.modulemap
Sources/RetroFrontCore/: CoreManagement.swift  LibraryStore.swift  LibretroRuntime.swift  Models.swift  RuntimeFeatures.swift  Scanner.swift  SystemCatalog.swift  Utilities.swift
Sources/RetroFrontiOS/: DetailAndPlayerViews.swift  LibraryViews.swift  ManagementViews.swift  RetroFrontApp.swift
Tests/RetroFrontCoreTests/: RetroFrontCoreTests.swift
common/gfx/video_filters/: normal4x.c
crates/retrofront-cli/: Cargo.toml
crates/retrofront-cli/src/: main.rs
crates/retrofront-core/: Cargo.toml
crates/retrofront-core/src/: config.rs  dynlib.rs  ffi.rs  host.rs  lib.rs  libretro.rs  menu.rs  overlay.rs
docs/: ARCHITECTURE.md  retroarch-ui-rust-replacement-roadmap.md
reference/RetroArch-master/: runahead.h
reference/RetroArch-master/gfx/drivers/: d3d10.c
reference/RetroArch/camera/: camera_driver.h
reference/RetroArch/gfx/drivers/: d3d11.c
reference/old-ui/: EmulatorRuntimeModel.swift  PlayView.swift  RetroArchStorageLayout.swift
scripts/: build-linux-appimage.sh  build-rust-ios.sh  fetch-frontend-assets.sh  generate-xcodeproj.sh  prepare-flutter-ios.sh
swift/: Package.swift
swift/Sources/RetroFrontApp/: main.swift
swift/Sources/RetroFrontKit/: ControllerSkin.swift  RetroFrontKit.swift
swift/Tests/RetroFrontKitTests/: RetroFrontKitTests.swift
(+10 files in other folders)
