[workspace]
members = ["core", "ui"]
resolver = "2"


[profile.release]
# iOS bundles were dominated by unstripped Rust/Slint objects. Link-time
# optimization, a single codegen unit, aborting panics, and symbol stripping keep
# the staticlib/app binary small without removing any bundled libretro cores.
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"

[profile.dev]
panic = "abort"
