[workspace]
members = ["core"]
resolver = "2"

[profile.release]
# Rust is now a single libretro frontend core that is consumed by Flutter via FFI.
# UI code lives in the Flutter project, so these settings optimize the native
# static/dynamic library without pulling platform UI dependencies into Cargo.
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"

[profile.dev]
panic = "abort"
