[package]
name = "retrofront-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust management core for the Retrofront libretro frontend"
build = "build.rs"

[lib]
name = "retrofront_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[features]
default = []

[build-dependencies]
bindgen = "0.69"
