[package]
name = "retrofront-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust management core for the Retrofront libretro frontend"
build = "build.rs"

[lib]
name = "retrofront_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[features]
default = []

[build-dependencies]
bindgen = "0.69"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tga"] }
