[package]
name = "retrofront-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Slint UI shell for Retrofront on Linux and iOS"
build = "build.rs"

[lib]
name = "retrofront_ui"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "retrofront"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = ["slint/backend-winit-x11", "slint/backend-winit-wayland", "slint/renderer-femtovg"]
# iOS must not pull desktop X11/Wayland/Qt backends. Slint 1.15 exposes iOS
# through the winit backend crate itself; renderer-skia selects Metal on Apple
# targets when OpenGL is not enabled, keeping the iOS bundle on a native-only path.
ios = ["slint/unstable-winit-030", "slint/renderer-skia"]

[dependencies]
retrofront-core = { path = "../core" }
slint = { version = "=1.15.1", default-features = false, features = ["compat-1-2", "std"] }

[build-dependencies]
slint-build = "=1.15.1"
