[package]
name = "retrofront-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
build = "build.rs"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Enables the unsafe bridge that will extract backend handles from wgpu and feed
# them to the ordinary Vulkan/Metal librashader runtimes. The librashader-wgpu
# runtime is intentionally not used.
librashader-runtime = ["dep:librashader", "dep:ash"]

[dependencies]
bitflags = "2.6"
libloading = "0.8"
parking_lot = "0.12"
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wgpu = { version = "29.0.3", default-features = false, features = ["std", "vulkan", "metal", "wgsl"] }
ash = { version = "0.38", optional = true }
librashader = { version = "0.11.1", default-features = false, features = ["runtime-vk", "runtime-metal", "presets", "preprocess", "reflect-cross", "reflect-naga"], optional = true }

[build-dependencies]
bindgen = "0.72"
