[package]
name = "retrofront-core"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27", default-features = true, features = ["wgpu"] }
egui = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "retrofront-ui"
path = "src/main.rs"
